[Fix][5296] Avatar in Breadcrum of Chat pop-up is not center align

--- a/frontend/web/less/desktop/popup_chat.less
+++ b/frontend/web/less/desktop/popup_chat.less
@@ -78,15 +78,15 @@
                 background-color: #e6e6e6;
                 text-align: center;
                 border-radius: 20px;
-                vertical-align: middle;
+                vertical-align: top;
                 display: inline-block;
+                line-height: 17px;
                 img {
                     border-radius: 20px;
                     max-width: 20px;
                     max-height: 20px;
                     width: auto;
                     height: auto;
-                    vertical-align: top;
                 }
             }
             .popup-title-username {
